Stage 4/5: Fair play